# RayMe

./: .gitignore  AGENTS.md  LICENSES.md  README.md
.claude/: settings.json  (+1 more)
ai-backend/: pyproject.toml
ai-backend/app/: config.py  main.py
ai-backend/app/api/: health.py  stt.py  tts.py  webrtc.py
ai-backend/app/audio/: __init__.py  filters.py  io.py
ai-backend/app/call/: __init__.py  events.py  session.py  tracks.py
ai-backend/app/models/: __init__.py  engine_metadata.py  gpu_runtime.py  model_manager.py  stt.py  tts_chatterbox.py  tts_f5.py  tts_luxtts.py  tts_qwen3.py  tts_registry.py  tts_tada.py  tts_voxcpm2.py  tts_voxcpm2_worker.py  tts_xtts.py  vad.py
ai-backend/docs/: RUNTIME-EVIDENCE.md  STT-GPU-RUNTIME.md
ai-backend/scripts/: run_https.py
ai-backend/tests/: test_call_session.py  test_gpu_runtime.py  test_health.py  test_model_manager.py  test_no_synthetic_production_paths.py  test_stt.py  test_tts_registry.py  test_tts_voxcpm2.py  test_webrtc_signaling.py
web-ui/server/: alembic.ini  config.example.env  pyproject.toml
web-ui/server/alembic/: env.py
web-ui/server/alembic/versions/: 0001_initial_schema.py  0002_voice_storage.py
web-ui/server/app/: __init__.py  config.py  main.py  security.py
web-ui/server/app/api/: __init__.py  ai_backend.py  calls.py  characters.py  chat.py  health.py  messages.py  settings.py  threads.py  voices.py
web-ui/server/app/domain/: __init__.py  ai_backend_client.py  call_service.py  card_export.py  card_models.py  cards.py  character_service.py  llm_probe.py  llm_stream.py  message_actions.py  portraits.py  prompt_builder.py  settings_service.py  thread_service.py  voice_assets.py  voice_service.py
web-ui/server/app/storage/: __init__.py  blob_store.py  models.py  reaper.py  session.py
web-ui/server/docs/: HTTPS-LAN.md  PHASE1-ACCEPTANCE.md  VOICE-LAB-RUNBOOK.md
web-ui/server/scripts/: run_dev_https.py
web-ui/server/tests/: conftest.py  test_app.py  test_blob_store.py  test_calls.py  test_card_export.py  test_card_import.py  test_characters.py  test_chat_stream.py  test_config.py  test_health_settings.py  test_message_actions.py  test_migrations.py  test_phase1_acceptance.py  test_prompt_builder.py  test_storage_session.py  test_threads.py  test_voices.py
(+743 files in other folders)
