[project]
name = "rayme-ai-backend"
version = "0.1.0"
description = "Phase 1 RayMe AI backend health service."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn==0.46.0",
  "httpx==0.28.1",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
