[project]
name = "rayme-ai-backend"
version = "0.1.0"
description = "Phase 1 RayMe AI backend health service."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn==0.46.0",
  "httpx==0.28.1",
  "pydantic==2.10.6",
  "pynvml==13.0.1",
  "soundfile==0.13.1",
  "numpy==2.2.6",
  "faster-whisper==1.2.1",
  "silero-vad==6.2.1",
  "python-multipart==0.0.26",
]

[project.optional-dependencies]
tts = [
  "f5-tts==1.1.17",
  "coqui-tts==0.27.5",
  "qwen-tts==0.1.1",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
