[project]
name = "rayme-web-server"
version = "0.1.0"
description = "FastAPI API and static host for the RayMe Web UI."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "sqlalchemy==2.0.49",
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "pydantic==2.13.3",
    "openai==2.32.0",
    "pillow==12.2.0",
    "python-multipart==0.0.26",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
